--- a/DecoWeb.css
+++ b/DecoWeb.css
@@ -6,7 +6,7 @@
 .header{
   min-height: 100vh;
   width: 100%;
-  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/Anime-Wallpaper.jpg);
+  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/HeaderImg-1.jpg);
   background-position: center;
   background-size: cover;
   position: relative;
@@ -89,6 +89,7 @@ nav .fa{
   .nav-links{
     position: absolute;
     background: #f44336;
+    opacity: 90%;
     height: 100vh;
     width: 200px;
     top: 0;
@@ -107,4 +108,115 @@ nav .fa{
   .nav-links ul{
     padding: 30px;
   }
+  .row{
+    flex-direction: column;
+  }
+  .gal-row{
+    flex-direction: column;
+  }
+}
+/* Services */
+.services{
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
+}
+.services h1{
+  font-size: 36px;
+  font-weight: 600;
+}
+p{
+  color: #777;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 10px;
+}
+.row{
+  margin: 5%;
+  /* display: flex; */
+  justify-content: space-between;
+}
+.services-col{
+  flex-basis: 31%;
+  background: #fff3f3;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 20px 12px;
+  box-sizing: border-box;
+}
+.services-col h3{
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
+}
+.services-col:hover{
+  box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+}
+/* Gallery */
+.gallery{
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 50px;
+}
+.gal-row{
+  margin: 5%;
+  display: flex;
+  justify-content: space-between;
+}
+.gallery-col{
+  flex-basis: 32%;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
+}
+.gallery-col img{
+  width: 100%;
+  display: block;
+}
+.layer{
+  /* background: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)); */
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 0.5s;
+}
+.layer:hover{
+  background: rgba(226, 0, 0, 0.7);
+}
+.layer h3{
+  width: 100%;
+  font-weight: 500;
+  color: white;
+  font-size: 20px;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  opacity: 0;
+  transition: 0.5s;
+}
+.layer:hover h3{
+  bottom: 49%;
+  opacity: 1;
+}
+.gallery-btn{
+  display: inline-block;
+  text-decoration: none;
+  color: black;
+  border: 1px solid black;
+  padding: 12px 34px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
+}
+.gallery-btn:hover{
+  border: 1px solid #f44336;
+  background: #f44336;
+  transition: 1s;
 }
