--- a/DecoWeb.css
+++ b/DecoWeb.css
@@ -36,7 +36,7 @@ nav a{
   content: '';
   width: 0%;
   height: 2px;
-  background: #f44336;
+  background: #5DADE2;
   display: block;
   margin: auto;
   transition: 0.5s;
@@ -72,8 +72,8 @@ nav a{
   cursor: pointer;
 }
 .visit-btn:hover{
-  border: 1px solid #f44336;
-  background: #f44336;
+  border: 1px solid #5DADE2;
+  background: #5DADE2;
   transition: 1s;
 }
 nav .fa{
@@ -88,7 +88,7 @@ nav .fa{
   }
   .nav-links{
     position: absolute;
-    background: #f44336;
+    background: #5DADE2;
     opacity: 90%;
     height: 100vh;
     width: 200px;
@@ -187,7 +187,7 @@ p{
   transition: 0.5s;
 }
 .layer:hover{
-  background: rgba(226, 0, 0, 0.7);
+  background: rgba(20, 205, 229, 0.7);
 }
 .layer h3{
   width: 100%;
@@ -216,8 +216,8 @@ p{
   cursor: pointer;
 }
 .gallery-btn:hover{
-  border: 1px solid #f44336;
-  background: #f44336;
+  border: 1px solid #5DADE2;
+  background: #5DADE2;
   transition: 1s;
 }
 .footer{
@@ -231,7 +231,7 @@ p{
   font-weight: 600;
 }
 .icon .fa{
-  color: #f44336;
+  color: #5DADE2;
   margin: 0 13px;
   cursor: pointer;
   padding: 18px;
